--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 
 .container {
+    color: white;
     display: grid;
     grid-template-columns: 100px 3fr 1fr 100px;
     grid-template-rows: auto;
@@ -33,10 +34,11 @@
 
 main section {
     flex-grow: 2;
+    max-width: 70%;
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 1fr 190px;
-    grid-template-rows: auto;
+    grid-template-rows: minmax(0, 350px);
     grid-template-areas: "sec sec"
     "para para";
 }
@@ -54,13 +56,18 @@ section header .imageDiv {
 
 section > header h1 {
     flex-grow: 2;
+    max-width: 70%;
     height: 100%;
     background-color: #2F4F4F;
+    padding-top: 100px;
+    font-size: 3.5rem;
 }
 
 section p {
     grid-area: para;
     background-color: #A9A9A9;
+    padding-top: 50px;
+    font-size: 1.7rem;
 }
 
 main aside {
